--- a/fire_detection.ipynb
+++ b/fire_detection.ipynb
@@ -348,6 +348,38 @@
     "def p3(a, b):\n",
     "    pass\n",
     "\n",
+    "def ps(vec_imgs,vec_masks):\n",
+    "  p_ab=np.zeros((24,24))\n",
+    "  p_la=np.zeros((24,24))\n",
+    "  p_lb=np.zeros((24,24))\n",
+    "  cant=len(vec_imgs)\n",
+    "  pxs=0\n",
+    "\n",
+    "  for k in range(0,cant):\n",
+    "    img=vec_imgs[k]\n",
+    "    mask=vec_masks[k]\n",
+    "    h,w,_=img.shape\n",
+    "    for i in range(h):\n",
+    "      for j in range(w):\n",
+    "        if mask[i,j]:\n",
+    "          #aumentar en 1 la,lb,ab\n",
+    "          l=img[i,j,0]\n",
+    "          a=img[i,j,1]\n",
+    "          b=img[i,j,2]\n",
+    "          l_ind=math.floor(24*l/101)\n",
+    "          a_ind=math.floor(24*(a+110)/221)\n",
+    "          b_ind=math.floor(24*(b+110)/221)\n",
+    "          p_la[l_ind,a_ind]+=1\n",
+    "          p_lb[l_ind,b_ind]+=1\n",
+    "          p_ab[a_ind,b_ind]+=1\n",
+    "          px+=1\n",
+    "\n",
+    "  p_la=p_la/px\n",
+    "  p_lb=p_lb/px\n",
+    "  p_ab=p_ab/px\n",
+    "\n",
+    "  return (p_la,p_lb,p_ab)\n",
+    "\n",
     "def p_lab(l, a, b):\n",
     "    return p1(l, a) * p2(l, b) * p3(a, b)"
    ]
