--- a/fire_detection.ipynb
+++ b/fire_detection.ipynb
@@ -11,7 +11,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Juan\\Documents\\Oli\\PDI\\pdi-fire-detection\\fire_detection.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Juan/Documents/Oli/PDI/pdi-fire-detection/fire_detection.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Juan/Documents/Oli/PDI/pdi-fire-detection/fire_detection.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mskimage\u001b[39;00m \u001b[39mimport\u001b[39;00m data\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Juan/Documents/Oli/PDI/pdi-fire-detection/fire_detection.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mskimage\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcolor\u001b[39;00m \u001b[39mimport\u001b[39;00m rgb2lab, lab2lch\n",
+      "File \u001b[1;32mc:\\Users\\Juan\\Documents\\Oli\\PDI\\pdi-fire-detection\\utils\\__init__.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m \u001b[39mimport\u001b[39;00m pyplot \u001b[39mas\u001b[39;00m plt\n\u001b[0;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m \u001b[39mimport\u001b[39;00m cm\n\u001b[0;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
    "source": [
     "from utils import *\n",
     "from skimage import data\n",
@@ -828,6 +841,52 @@
     "\n",
     "    return cfs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def en_rango(x,y,h,w):\n",
+    "  return 0<=x and x<h and 0<=y and y<w\n",
+    "\n",
+    "def componentes_conexas(img_cf):\n",
+    "  h,w=img_cf.shape\n",
+    "  posiciones_con_uno=[]\n",
+    "  componentes_conexas=[] #O(t) lista de listas\n",
+    "  #cant_elementos_comp_conexas=[] #NO(t) lista de números\n",
+    "  indices_px_unos={}\n",
+    "\n",
+    "  for x in range(h):\n",
+    "    for y in range(w):\n",
+    "      if img_cf[x,y]:\n",
+    "        posiciones_con_uno.append((x,y))\n",
+    "        indices_px_unos[(x,y)]=len(posiciones_con_uno)-1\n",
+    "  \n",
+    "  cant=len(posiciones_con_uno)\n",
+    "  componente_conexa_correspondiente=np.full(cant,-1)\n",
+    "      \n",
+    "  for k in range(cant):\n",
+    "    px,py=posiciones_con_uno[k]\n",
+    "    if componente_conexa_correspondiente[k]==-1:\n",
+    "      #crear componente conexa\n",
+    "      componentes_conexas.append([(px,py)])\n",
+    "      comp_conexa=len(componentes_conexas-1)\n",
+    "    else:\n",
+    "      comp_conexa=componente_conexa_correspondiente[k]\n",
+    "\n",
+    "    #mirar vecinos y asignar componente conexa correspondiente\n",
+    "    for vx in range(max(px-1,0),min(px+2,h)):\n",
+    "      for vy in range(max(py-1,0),min(py+2,w)):\n",
+    "        if img_cf[vx,vy] and vx!=px and vy!=py:\n",
+    "          idx=indices_px_unos[(vx,vy)]\n",
+    "          componente_conexa_correspondiente[idx]\n",
+    "          componentes_conexas[comp_conexa].append((vx,vy))\n",
+    "\n",
+    "  \n",
+    "  return componentes_conexas"
+   ]
   }
  ],
  "metadata": {
@@ -846,7 +905,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
