--- a/fire_detection.ipynb
+++ b/fire_detection.ipynb
@@ -872,7 +872,7 @@
     "    if componente_conexa_correspondiente[k]==-1:\n",
     "      #crear componente conexa\n",
     "      componentes_conexas.append([(px,py)])\n",
-    "      comp_conexa=len(componentes_conexas-1)\n",
+    "      comp_conexa=len(componentes_conexas)-1\n",
     "    else:\n",
     "      comp_conexa=componente_conexa_correspondiente[k]\n",
     "\n",
