estaba mal componente conexa

--- a/fire_detection.ipynb
+++ b/fire_detection.ipynb
@@ -857,6 +857,7 @@
     "  componentes_conexas=[] #O(t) lista de listas\n",
     "  #cant_elementos_comp_conexas=[] #NO(t) lista de números\n",
     "  indices_px_unos={}\n",
+    "  \n",
     "\n",
     "  for x in range(h):\n",
     "    for y in range(w):\n",
@@ -886,6 +887,69 @@
     "\n",
     "  \n",
     "  return componentes_conexas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def componente_conexa_en_el_tiempo(img_cf,componentes_conexas):\n",
+    "  h,w=img_cf.shape\n",
+    "  posiciones_con_uno=[]\n",
+    "  indices_px_unos={}\n",
+    "  componentes_conexas_modificadas=[]\n",
+    "\n",
+    "  for x in range(h):\n",
+    "    for y in range(w):\n",
+    "      if img_cf[x,y]:\n",
+    "        posiciones_con_uno.append((x,y))\n",
+    "        indices_px_unos[(x,y)]=len(posiciones_con_uno)-1\n",
+    "  \n",
+    "  cant=len(posiciones_con_uno)\n",
+    "  componente_conexa_correspondiente=np.full(cant,-1)\n",
+    "\n",
+    "  for comp conexa\n",
+    "    dor elem comp conexa\n",
+    "      if esta definida\n",
+    "\n",
+    "  \n",
+    "  return componentes_conexas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cgo(componentes_conexas,vec_video):\n",
+    "    cant_v=len(vec_video)\n",
+    "    cant_cc=len(componentes_conexas)\n",
+    "    cgos=np.zeros(cant_v) #contador de movimiento por componente conexa\n",
+    "    n_elem_comp=np.zeros((cant_v,cant_cc))\n",
+    "\n",
+    "    #componentes_conexas es lista de: lista de posiciones [c1,c2....,cn]-> ci->[px1....pxm]\n",
+    "    for k in range(cant_v):\n",
+    "        img=vec_video[k]\n",
+    "        #img cant elementos de c/comp conexa\n",
+    "        #-----\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def d_metric(cgo,cgo_1s_ant,fps):\n",
+    "    return (cgo-cgo_1s_ant)/fps"
    ]
   }
  ],
