--- a/fire_detection.ipynb
+++ b/fire_detection.ipynb
@@ -883,21 +883,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cgo(componentes_conexas,vec_video):\n",
+    "def posiciones_indices_con_uno_img(img_cf):\n",
+    "    h,w=img_cf.shape\n",
+    "    posiciones_con_uno=[]\n",
+    "    indices_px_unos={}\n",
+    "    for x in range(h):\n",
+    "        for y in range(w):\n",
+    "            if img_cf[x,y]:\n",
+    "                posiciones_con_uno.append((x,y))\n",
+    "                indices_px_unos[(x,y)]=len(posiciones_con_uno)-1\n",
+    "    \n",
+    "    return (indices_px_unos,posiciones_con_uno)\n",
+    "\n",
+    "def posiciones_indices_con_uno_video(img_cfs):\n",
+    "    cant,_,_=img_cfs.shape\n",
+    "    video_posiciones_con_uno=[]\n",
+    "    video_indices_px_unos=[]\n",
+    "\n",
+    "    for k in range(cant):\n",
+    "        img_cf=img_cfs[k]\n",
+    "        indices_px_unos,posiciones_con_uno=posiciones_indices_con_uno_img(img_cf)\n",
+    "        video_posiciones_con_uno.append(posiciones_con_uno)\n",
+    "        video_indices_px_unos.append(indices_px_unos)\n",
+    "\n",
+    "    return (video_indices_px_unos,video_posiciones_con_uno)\n",
+    "\n",
+    "def cgo(vec_video):\n",
+    "    \n",
     "    cant_v=len(vec_video)\n",
     "    cant_cc=len(componentes_conexas)\n",
-    "    cgos=np.zeros(cant_v) #contador de movimiento por componente conexa\n",
+    "    cgos=np.zeros((cant_v,cant_cc)) #contador de movimiento por componente conexa\n",
     "    n_elem_comp=np.zeros((cant_v,cant_cc))\n",
+    "    cfs=candidate_fire_pixels_vec(vec_video)\n",
     "\n",
-    "    #componentes_conexas es lista de: lista de posiciones [c1,c2....,cn]-> ci->[px1....pxm]\n",
-    "    for k in range(cant_v):\n",
-    "        img=vec_video[k]\n",
-    "        #img cant elementos de c/comp conexa\n",
-    "        #-----\n",
+    "    componentes_conexas=componentes_conexas(cfs[0])\n",
+    "    video_indices_px_unos,video_posiciones_con_uno=posiciones_indices_con_uno_video(vec_video)\n",
     "\n",
+    "    for comp_ind in range(cant_cc):\n",
+    "        comp_act=componentes_conexas[comp_ind]\n",
+    "        n_elem_comp[k,comp_ind]=len(comp_act)\n",
     "\n",
+    "    #componentes_conexas es lista de: lista de posiciones [c1,c2....,cn] -> ci -> [px1....pxm]\n",
+    "    for comp_ind in range(cant_cc):\n",
+    "        comp_act=componentes_conexas[comp_ind]\n",
+    "        for k in range(1,cant_v):\n",
+    "            img_cf=cfs[k]\n",
+    "            comp_act=componente_conexa_en_el_tiempo(img_cf,video_posiciones_con_uno[k],video_indices_px_unos[k],comp_act)\n",
+    "            n_elem_comp[k,comp_ind]=len(comp_act)\n",
     "\n",
-    "    pass"
+    "    for comp_ind in range(cant_cc):\n",
+    "        for k in range(1,cant_v):\n",
+    "            if n_elem_comp[k,comp_ind]>=n_elem_comp[k-1,comp_ind]:\n",
+    "                cgos[k,comp_ind]=cgos[k-1,comp_ind]+1\n",
+    "            else:\n",
+    "                cgos[k,comp_ind]=cgos[k-1,comp_ind]\n",
+    "    \n",
+    "    return cgos"
    ]
   },
   {
@@ -908,6 +949,16 @@
    "source": [
     "def d_metric(cgo,cgo_1s_ant,fps):\n",
     "    return (cgo-cgo_1s_ant)/fps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
+    "    pass"
    ]
   }
  ],
