Sigo reorganizando y reescribiendo a latex

--- a/cielab.ipynb
+++ b/cielab.ipynb
@@ -82,7 +82,7 @@
     "\\right.\n",
     "$\n",
     "\n",
-    "Con $X_n,\\ Y_n$ y $Z_n$..."
+    "Con $X_n,\\ Y_n$ y $Z_n$ siendo los valores de referencia para el color blanco."
    ]
   },
   {
