--- a/ps.ipynb
+++ b/ps.ipynb
@@ -88,7 +88,7 @@
     "    np.savetxt(f, p2, fmt=\"%.10f\")\n",
     "\n",
     "with open(\"p3.txt\", \"wb\") as f:\n",
-    "    np.savetxt(f, p3, fmt=\"%.10f\")"
+    "    np.savetxt(f, p3, fmt=\"%.10f\")\n"
    ]
   },
   {
